syntax = "proto3";

import "google/protobuf/field_mask.proto";

package usrdata;

option go_package = "shapeup.usrdata.v1;usrdatasvc";

// BsUsr basic user attributes.
message BsUsrAttr {
  string name = 1;
  double height = 4;
  double weight = 5;
  string gender = 6;
  string birth_date = 7;
}

service UsrData {
  rpc UpdBsUsrAttr(UpdBsUsrAttrRequest) returns (UpdBsUsrAttrResponse);
}

message UpdBsUsrAttrRequest {
  BsUsrAttr user = 1;

  // FieldMask, shows which fields should be updated.
  google.protobuf.FieldMask upd_mask = 2;
}

message UpdBsUsrAttrResponse{
  BsUsrAttr user = 1;
}